--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0', '3.1']
+        ruby-version: ['2.6', '2.7', '3.0', '3.1', '3.2']
         gemfile: [ rails_5.2, rails_6.0, rails_6.1, rails_7.0 ]
         experimental: [false]
 
@@ -24,6 +24,9 @@ jobs:
             gemfile: rails_edge
             experimental: true
           - ruby-version: '3.1'
+            gemfile: rails_edge
+            experimental: true
+          - ruby-version: '3.2'
             gemfile: rails_edge
             experimental: true
           - ruby-version: 'head'
@@ -49,6 +52,12 @@ jobs:
             gemfile: rails_5.2
           - ruby-version: '3.1'
             gemfile: rails_6.0
+          - ruby-version: '3.2'
+            gemfile: rails_5.2
+          - ruby-version: '3.2'
+            gemfile: rails_6.0
+          - ruby-version: '3.2'
+            gemfile: rails_6.1
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
@@ -56,7 +65,7 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: nanasess/setup-chromedriver@v1.0.1
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
