--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -74,6 +74,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby-version }}
+        rubygems: latest
         bundler-cache: true
     - name: Run tests
       run: bundle exec rake test:ruby
