--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,30 +17,30 @@ jobs:
       matrix:
         ruby-version: ['2.6', '2.7', '3.0', '3.1', '3.2']
         gemfile: [ rails_5.2, rails_6.0, rails_6.1, rails_7.0 ]
-        experimental: [false]
+        channel: ['stable']
 
         include:
           - ruby-version: '2.7'
             gemfile: rails_edge
-            experimental: true
+            channel: 'experimental'
           - ruby-version: '3.0'
             gemfile: rails_edge
-            experimental: true
+            channel: 'experimental'
           - ruby-version: '3.1'
             gemfile: rails_edge
-            experimental: true
+            channel: 'experimental'
           - ruby-version: '3.2'
             gemfile: rails_edge
-            experimental: true
+            channel: 'experimental'
           - ruby-version: 'head'
             gemfile: rails_6.1
-            experimental: true
+            channel: 'experimental'
           - ruby-version: 'head'
             gemfile: rails_7.0
-            experimental: true
+            channel: 'experimental'
           - ruby-version: 'head'
             gemfile: rails_edge
-            experimental: true
+            channel: 'experimental'
 
         exclude:
           - ruby-version: '2.6'
@@ -65,7 +65,7 @@ jobs:
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
-    continue-on-error: ${{ matrix.experimental }}
+    continue-on-error: ${{ matrix.channel != 'stable' }}
 
     steps:
     - uses: actions/checkout@v3
