--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/DavyJonesLocker/client_side_validations",
   "scripts": {
     "build": "standard --verbose && rollup -c",
-    "test": "test/javascript/run-qunit.js"
+    "test": "test/javascript/run-qunit.mjs"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
