Fix safe performance offences
Also ignore Minitest/NonExecutableTestMethod for the moment because of
#927

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -62,6 +62,10 @@ Metrics/PerceivedComplexity:
 Minitest/MultipleAssertions:
   Enabled: false
 
+# FIXME: DavyJonesLocker/client_side_validations#927
+Minitest/NonExecutableTestMethod:
+  Enabled: false
+
 Rails/ApplicationRecord:
   Exclude:
     - 'test/**/*'
