--- a/package.json
+++ b/package.json
@@ -22,26 +22,26 @@
     "test": "test/javascript/run-qunit.mjs"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.2",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "chrome-launcher": "^1.1.2",
-    "puppeteer-core": "^23.4.1",
-    "rollup": "^4.22.0",
+    "puppeteer-core": "^23.5.3",
+    "rollup": "^4.24.0",
     "rollup-plugin-copy": "^3.5.0",
     "standard": "^17.1.2"
   },
-  "dependencies": {},
   "peerDependencies": {
     "jquery": ">= 1.12.4 < 4.0.0"
   },
   "main": "dist/client-side-validations.js",
   "module": "dist/client-side-validations.esm.js",
   "engines": {
-    "node": ">=12.0.0",
-    "yarn": ">=1.19.0"
+    "node": ">= 18.0",
+    "pnpm": "^9.12.1"
   },
+  "packageManager": "pnpm@^9.12.1",
   "browserslist": [
     ">= 1%",
     "last 1 major version",
