--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@client-side-validations/client-side-validations",
-  "description": "Client Side Validations made easy for your Rails 6.1 / 7.x applications",
+  "description": "Client Side Validations made easy for your Rails 6.1, 7.x, and 8.0 applications",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DavyJonesLocker/client_side_validations.git"
@@ -22,15 +22,15 @@
     "test": "test/javascript/run-qunit.mjs"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.8",
-    "@babel/preset-env": "^7.25.8",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "chrome-launcher": "^1.1.2",
-    "eslint": "^9.12.0",
-    "neostandard": "^0.11.6",
-    "puppeteer-core": "^23.5.3",
-    "rollup": "^4.24.0",
+    "eslint": "^9.14.0",
+    "neostandard": "^0.11.7",
+    "puppeteer-core": "^23.7.1",
+    "rollup": "^4.25.0",
     "rollup-plugin-copy": "^3.5.0"
   },
   "peerDependencies": {
